Bug 1920902 - Ensure sidebar search textbox is visible by setting border. r=sidebar-reviewers,sclements
Semantics are a bit off with this variable, but this is consistent with https://searchfox.org/mozilla-central/rev/af3eccb4999427e42fdcea558297f1cec70dc4db/browser/components/sidebar/sidebar.css#77.

Differential Revision: https://phabricator.services.mozilla.com/D223467

--- a/browser/components/sidebar/sidebar.css
+++ b/browser/components/sidebar/sidebar.css
@@ -61,7 +61,7 @@ fxview-search-textbox {
     background-color: var(--toolbar-field-background-color);
     color: var(--toolbar-field-color);
     border-radius: 2em;
-    border: none;
+    border: 0.5px solid var(--panel-separator-color);
   }
 
   &::part(container) {
